apps/mongo-express/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &SVCNAME mongo-express
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8081
    targetPort: 8081
  selector:
    pod: *SVCNAME
